Fixed Groups' really long names causes it to go beyond the webpage's bounds (6299)
    - When there is a really long word, it is broken into two parts and the title is put into a new line

--- a/css/groups.less
+++ b/css/groups.less
@@ -107,6 +107,10 @@
 
 		 .page-header-nav {
 			clear : left;
+
+			h2 {
+				word-break : break-word;
+			}
 		 }
 	}
 
